# MeshCartographyLib-rs

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs
src/: lib.rs  main.rs  mesh_definition.rs
src/IO/: mod.rs
src/SurfaceParameterization/: harmonic_parameterization_helper.rs  laplacian_matrix.rs
src/cpp/: cholesky_decomposition_bridge.rs  input.h
src/geodesic_distance/: cached_geodesic_distance_helper.rs  curvature_helper.rs  dijkstra_distance_helper.rs  gaussian_curvature.rs  gaussian_cut_line_helper.rs
src/mesh_cutting/: mod.rs
src/mesh_metric/: angle_distortion_helper.rs  face_distortion_helper.rs  length_distortion_helper.rs
src/monotile_border/: hexagon_border_helper.rs  mod.rs  monotile_border_trait.rs  square_border_helper.rs
src/surface_parameterization/: boundary_matrix.rs  harmonic_parameterization_helper.rs  laplacian_matrix.rs  tessellation_helper.rs
test/data/: B.csv  L_sparse.csv  is_constrained.csv
