[package]
name = "new_king"
version = "0.1.0"
authors = ["Jan-Piotraschke <piotraschke.janniklas@gmail.com>"]
edition = "2021"

[lib]
name = "new_king_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
tobj = "4.0.0"
miette = "5.10.0"
tri-mesh = "0.6.0"
three-d-asset = { version = "0.4.0", features = ["obj"] }
log = "0.4"
env_logger = "0.10.1"
nalgebra = "0.32.3"
ndarray = "0.15.6"
nalgebra-sparse = "0.9.0"
num-traits = "0.2.17"

[build-dependencies]
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
