[package]
name = "new_king"
version = "0.1.0"
authors = ["Jan-Piotraschke <piotraschke.janniklas@gmail.com>"]
edition = "2021"

[lib]
name = "new_king_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.3.0"
env_logger = "0.10.1"
log = "0.4"
miette = "5.10.0"
nalgebra = "0.32.3"
nalgebra-sparse = "0.9.0"
ndarray = "0.15.6"
num-traits = "0.2.17"
pathfinding = "4.8.0"
three-d-asset = { version = "0.4.0", features = ["obj"] }
tobj = "4.0.0"
tri-mesh = "0.6.0"
wasm-bindgen = "0.2.84"
wavefront_obj = "10.0.0"

[build-dependencies]
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
